[project]
name = "computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.12",
    "livelossplot>=0.5.6",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
